--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,8 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "apollo-server-express": "^2.12.0",
+    "express": "^4.17.1",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1"
   },
