Add gql type generation

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,7 @@
 {
   "projects": {
-    "default": "platter-api"
+    "default": "platter-app",
+    "prod": "platter-app",
+    "dev": "platter-app-dev"
   }
 }
