--- a/functions/package.json
+++ b/functions/package.json
@@ -6,7 +6,9 @@
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "fetch-schema": "apollo-codegen introspect-schema https://us-central1-platter-app-dev.cloudfunctions.net/api --output schema.json",
+    "generate-types": "graphql-codegen --config codegen.yml"
   },
   "engines": {
     "node": "8"
@@ -16,11 +18,15 @@
     "apollo-server-express": "^2.12.0",
     "express": "^4.17.1",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1"
+    "firebase-functions": "^3.6.1",
+    "graphql": "^15.0.0"
   },
   "devDependencies": {
-    "typescript": "^3.8.0",
-    "firebase-functions-test": "^0.2.0"
+    "@graphql-codegen/cli": "^1.13.4",
+    "@graphql-codegen/typescript-document-nodes": "^1.13.4",
+    "@graphql-codegen/typescript-resolvers": "^1.13.4",
+    "firebase-functions-test": "^0.2.0",
+    "typescript": "^3.8.0"
   },
   "private": true
 }
