--- a/functions/package.json
+++ b/functions/package.json
@@ -23,7 +23,8 @@
     "firebase-admin": "^8.11.0",
     "firebase-functions": "^3.6.1",
     "firebase-tools": "^8.2.0",
-    "graphql": "^15.0.0"
+    "graphql": "^15.0.0",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.13.4",
