--- a/functions/package.json
+++ b/functions/package.json
@@ -24,7 +24,8 @@
     "firebase-functions": "^3.6.1",
     "firebase-tools": "^8.2.0",
     "graphql": "^15.0.0",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "uuidv4": "^6.0.8"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.13.4",
