--- a/functions/package.json
+++ b/functions/package.json
@@ -25,6 +25,7 @@
     "firebase-tools": "^8.2.0",
     "graphql": "^15.0.0",
     "lodash": "^4.17.15",
+    "moment": "^2.26.0",
     "uuidv4": "^6.0.8"
   },
   "devDependencies": {
